test/TestSuite/Syntax/Errors/bad_include.tjp
project test "Test" "1.0" 2007-08-19 +2m 

# Unfortunately, include file errors are reported at the first token
# after the include statement.
# MARK: error 8 bad_include
include "foo.tji"

task bar "Bar" {
	start ${projectstart}
}

